tests/ui/inference/closure-index-method-issue-76112.stderr
error[E0282]: type annotations needed
  --> $DIR/closure-index-method-issue-76112.rs:6:23
   |
LL |     let get = |index| array[index].pow(1);
   |                       ^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
